corpus/cpp/constexpr/case-01/snapshots/gcc13_14/native_text_capture/render.verbose.txt
note: some compiler details were not fully structured; original diagnostics are preserved
error: [constexpr] compile-time evaluation failure @ src/main.cpp:1:27
help: ensure all expressions and function calls in the constexpr context are constant-evaluable
raw : src/main.cpp:1:27: error: static assertion failed: int size mismatch
| src/main.cpp:1:27
| static_assert(sizeof(int) == 1, "int size mismatch");
|                           ^
note: src/main.cpp:1:27: note: the comparison reduces to ‘(4 == 1)’
raw:
  src/main.cpp:1:27: error: static assertion failed: int size mismatch
      1 | static_assert(sizeof(int) == 1, "int size mismatch");
        |               ~~~~~~~~~~~~^~~~
debug: rule_id=rule.family.constexpr.message_terms
debug: matched_conditions=message_contains=static assertion failed, message_contains=static_assert, phase=semantic
raw: rerun with --formed-profile=raw_fallback to inspect the original compiler output